content and clean up

--- a/_posts/2017-05-25-post0.md
+++ b/_posts/2017-05-25-post0.md
@@ -1,9 +1,6 @@
 ---
-layout: post
 title: Getting started with our application
-categories: [Getting Started, Account and Billing, Troubleshooting]
-tags: featured
-author: John Black
+author: peter
 ---
 
 Musce libero nunc, dignissim quis turpis quis, semper vehicula dolor. Suspendisse tincidunt consequat quam, ac posuere leo dapibus id. Cras fringilla convallis elit, at eleifend mi interam.
