--- a/_posts/2017-05-25-post61.md
+++ b/_posts/2017-05-25-post61.md
@@ -1,8 +1,6 @@
 ---
-layout: post
 title: Upgrading to paid service
-categories: [Getting Started, Troubleshooting]
-author: John Black
+author: peter
 ---
 
 Musce libero nunc, dignissim quis turpis quis, semper vehicula dolor. Suspendisse tincidunt consequat quam, ac posuere leo dapibus id. Cras fringilla convallis elit, at eleifend mi interam.
